objects/ccpe_r__Utilization__c.object
<CustomObject>
    <fields>
        <fullName>ccpe_r__Billable_Hours__c</fullName>
        <label>Billable Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ccpe_r__End__c</fullName>
        <formula>IF($RecordType.DeveloperName == &apos;Weekly&apos;,
	ccpe_r__Start__c + 6,
/*ELSE*/IF($RecordType.DeveloperName == &apos;Monthly&apos;,
	DATE(
		YEAR(ccpe_r__Start__c),
		MONTH(ccpe_r__Start__c),
		CASE(MONTH(ccpe_r__Start__c),
			1, 31,
			2, IF(MOD(YEAR(ccpe_r__Start__c), 4) = 0, 29, 28),
			3, 31,
			4, 30,
			5, 31,
			6, 30,
			7, 31,
			8, 31,
			9, 30,
			10, 31,
			11, 30,
			12, 31,
			0
		)
	),
	NULL
))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>End</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ccpe_r__Exempt_Hours__c</fullName>
        <label>Exempt Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ccpe_r__Hash__c</fullName>
        <formula>CASESAFEID(OwnerId) &amp; CASESAFEID(RecordTypeId) &amp; TEXT(ccpe_r__Start__c)</formula>
        <label>Hash</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccpe_r__Non_Billable_Hours__c</fullName>
        <formula>ccpe_r__Worked_Hours__c - ccpe_r__Exempt_Hours__c - ccpe_r__Billable_Hours__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Non Billable Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ccpe_r__Start__c</fullName>
        <label>Start</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ccpe_r__Utilization_rate__c</fullName>
        <formula>(ccpe_r__Billable_Hours__c +  ccpe_r__Exempt_Hours__c ) /  ccpe_r__Working_Hours__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Denotes the utilization rate of a user for a particular week or month (NOTE this field should not be used for reporting across multiple utilization periods)</inlineHelpText>
        <label>Utilization Rate</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ccpe_r__Worked_Hours__c</fullName>
        <label>Entered Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ccpe_r__Working_Days__c</fullName>
        <description>How many working days are there between the start and end dates</description>
        <label>Working Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ccpe_r__Working_Hours__c</fullName>
        <label>Target Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Utilization</label>
    <listViews>
        <fullName>ccpe_r__All</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>ccpe_r__Start__c</columns>
        <columns>ccpe_r__End__c</columns>
        <columns>ccpe_r__Worked_Hours__c</columns>
        <columns>ccpe_r__Billable_Hours__c</columns>
        <columns>ccpe_r__Exempt_Hours__c</columns>
        <columns>ccpe_r__Non_Billable_Hours__c</columns>
        <columns>ccpe_r__Working_Hours__c</columns>
        <columns>ccpe_r__Utilization_rate__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>U-{0}</displayFormat>
        <label>Utilization Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Utilizations</pluralLabel>
    <recordTypes>
        <fullName>ccpe_r__Monthly</fullName>
        <active>true</active>
        <description>Utilization calculations for a month of utilization</description>
        <label>Monthly</label>
    </recordTypes>
    <recordTypes>
        <fullName>ccpe_r__Weekly</fullName>
        <active>true</active>
        <description>Utilization calculations for a week of utilization</description>
        <label>Weekly</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>